attempts to make render work on mobile and recaptcha fixes

--- a/backend/public/browser/assets/scss/basics/_base.scss
+++ b/backend/public/browser/assets/scss/basics/_base.scss
@@ -18,10 +18,13 @@ body {
 
 
 body>div:last-child {
-  position: fixed !important;
-  top: 50% !important;
-  left: 50% !important;
-  transform: translate(-50%, -50%) !important;
+  position: absolute !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  // transform: translate(-50%, -50%) !important;
+  max-width: 350px;
+  height: fit-content;
+  z-index: 100;
 }
 
 img {
